# src/routes/index.ts
@@ -5,9 +5,12 @@ import multer from 'multer'
 
 import ValidateRequestMiddleware from '@middlewares/ValidateRequestMiddleware'
 import AuthMiddleware from '@middlewares/AuthMiddleware'
+import CheckFileHeaderMiddleware from '@middlewares/CheckFileHeaderMiddleware'
 
 import SellerController from '@controllers/SellerController'
 import SellerValidator from '@validators/SellerValidator'
+
+import BookController from '@controllers/BookController'
 
 const router = Router()
 const upload = multer({
@@ -18,6 +21,11 @@ const upload = multer({
 router.post('/api/sellers', SellerValidator.create, ValidateRequestMiddleware, SellerController.create)
 router.post('/api/sellers/login', SellerValidator.login, ValidateRequestMiddleware, SellerController.login)
 
-router.post('/api/sellers/catalog', AuthMiddleware, upload.single('catalog'), SellerController.catalog)
+// Book
+router.get('/api/books', AuthMiddleware, BookController.index)
+router.post('/api/books', AuthMiddleware, CheckFileHeaderMiddleware, upload.single('book'), BookController.uploadBook)
+router.post('/api/books/catalog', AuthMiddleware, CheckFileHeaderMiddleware, upload.single('catalog'), BookController.uploadCatalog)
+
+router.get('/api/books/download/:sellerId/:bookId', BookController.downloadBook)
 
 export default router
